--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,6 @@
-/* You can add global styles to this file, and also import other style files */
+/*global styles*/
+body {
+  margin: 0;
+
+  background-color: #a6a0e094;
+}
